...
    <string name="label_permisions_normal">Normal permissions</string>
    
    <string name="pref_dashclock_default_stat_type_summary">Set the stat type to be shown in dashclock</string>
    <string name="pref_dashclock_fallback_stat_type_summary">Set the fallback stat type to be shown in the dashclock if the primary one has no reference</string>
    <string name="label_awake_abbrev">aw.</string>
    <string name="label_button_share">Share to...</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_cancel">Cancel</string>
    <string name="label_button_application_settings">Application Settings</string>
    <string name="label_button_appops">App Ops</string>
    
    
    <string name="title_share_dialog">Share data as...</string>
    <string name="share_dialog_edit_title">Note</string>
    <string name="text_since">Since</string>
    <string name="label_preferences">Settings</string>
    <string name="label_packageinfo">Package Info</string>
    <string name="label_graphs">Graphs</string>
    <string name="label_moregraphs">More Graphs</string>
    <string name="label_series">History</string>
    <string name="label_raw_stats">Raw Stats</string>
    <string name="label_about">About</string>
    <string name="label_credits">Credits</string>
    <string name="label_help">Help</string>
    <string name="label_howto">How-To</string>
    <string name="label_system_app">System App</string>
    <string name="label_import_export">Import/Export</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_share">Share</string>
    <string name="label_custom_ref">Set Custom Ref.</string>
    <string name="label_release_notes">Release Notes</string>
    <string name="label_legend">Legend</string>
    <string name="label_button_yes">Yes</string>
    <string name="label_button_no">No</string>
    <string name="label_button_ok">OK</string>
    <string name="label_tab_package">Package</string>
...
    <string name="pref_auto_refresh_summary">Automatically reload \'current\' when switching screens/settings</string>
    <string name="pref_section_sharing">Sharing options</string>
    <string name="pref_save_dumpfile_title">Dumpfile</string>
    <string name="pref_save_dumpfile_summary">Share dumpfile</string>
    <string name="pref_save_logcat_title">Logcat</string>
    <string name="pref_save_logcat_summary">Share logcat</string>
    <string name="pref_save_dmesg_title">dmesg</string>
    <string name="pref_save_dmesg_summary">Share dmesg</string>
    <string name="pref_force_alarms_api_title">Alarms using API</string>
    <string name="pref_force_alarms_api_summary">Force to retrieve Alarms using the API</string>
    <string name="pref_force_kwl_api_title">Kernel Wakelocks using API</string>
    <string name="pref_force_kwl_api_summary">Force to retrieve Kernel Wakelocks using the API</string>
    <string name="pref_force_network_api_title">Network Stats using API</string>
...
