<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:orientation="vertical"
	android:layout_height="fill_parent">
	<com.androidplot.xy.XYPlot
		android:id="@+id/mySimpleXYPlot"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="5px"
		android:layout_marginBottom="5px"
		android:layout_marginLeft="0px"
		android:layout_marginRight="0px"
		title="The economy" />
</LinearLayout>