<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="always"
        android:title="Refresh"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="ifRoom"
        android:title="Share"/>
    <item
        android:id="@+id/custom_ref"
        android:title="Set Custom Ref."/>
    <item
        android:id="@+id/raw_stats"
        android:title="RAW Stats"/>
    
</menu>