...
            android:layout_marginTop="20dp"
            android:text="@string/expl_system_app_workaround"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/label_button_recovery" />
...
